--- a/example/requirements.txt
+++ b/example/requirements.txt
@@ -29,3 +29,5 @@ http://downloads.sourceforge.net/project/mysql-python/mysql-python-test/1.2.3c1/
 # onwards. Since most people are still using <= 1.1.1, we can use the
 # backported message framework:
 django-messages-framework
+
+django-test-utils
