--- a/example/requirements.txt
+++ b/example/requirements.txt
@@ -30,4 +30,11 @@ http://downloads.sourceforge.net/project/mysql-python/mysql-python-test/1.2.3c1/
 # backported message framework:
 django-messages-framework
 
-django-test-utils
+# Uncomment below packages if you want to run app/tests.py.
+# django-test-utils includes twill_runner, which we use to test RPX logins.
+# It has BeautifulSoup as a dependency (automatically installed).
+#django-test-utils
+
+# Twill automates browsing and is important for accessing RPX APIs to test
+# our login system.
+#twill
