--- a/example/requirements.txt
+++ b/example/requirements.txt
@@ -21,7 +21,7 @@ http://downloads.sourceforge.net/project/mysql-python/mysql-python-test/1.2.3c1/
 # This is the django_rpx project that we grab from git. Depends on
 # django-picklefield, but that should be automatically installed since it
 # is listed as a dependency in setup.py.
--e git://github.com/mikexstudios/django-rpx.git#egg=django_rpx
+-e git://github.com/mikexstudios/django-rpx-plus.git#egg=django_rpx_plus
 #django-picklefield
 
 # Success and error messages are displayed using the new django message
